@@ -1,5 +1,9 @@
 2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* LookAtViewer.cpp: 
+
+2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Console.h:
 	* Console.cpp: 
 
