@@ -1,5 +1,15 @@
 2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* BrowserWindow.h:
+	* BrowserWindow.cpp:
+	* BrowserWindow.xml:
+	* X3DBrowserEditor.h:
+	* X3DBrowserEditor.cpp:
+	* X3DBrowserWindowInterface.h:
+	* X3DBrowserWindowInterface.cpp: 
+
+2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* OutlineEditor.cpp:
 	* MFImage.svg:
 	* SFImage.svg: 
